# mentat

./: .env  .gitignore  README.md  pyproject.toml  run.py
core/: backend.py  core.py  environment.py  parser.py  workflow.py
workflows/twitter/: environment.py  twitter.py
